@startuml diagrama
class User {
  + id: int
  + name: string
  + email: string
  + password: string
  --
  + createCourse(): Course
  + getCourses(): Collection<Course>
}

class Course {
  + id: int
  + title: string
  + description: text
  + user_id: int
  --
  + user(): User
  + modules(): Collection<Module>
}

class Module {
  + id: int
  + title: string
  + course_id: int
  --
  + course(): Course
  + subjects(): Collection<Subject>
}

class Subject {
  + id: int
  + title: string
  + module_id: int
  --
  + module(): Module
  + topics(): Collection<Topic>
}

class Topic {
  + id: int
  + title: string
  + content: text
  + subject_id: int
  --
  + subject(): Subject
}

User "1" -- "n" Course : Has
Course "1" -- "n" Module : Contains
Module "1" -- "n" Subject : Contains
Subject "1" -- "n" Topic : Contains

@enduml
```